{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 39,
  "lineage": "5feca59a-6516-e90f-9579-9e5941bb080d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "flask_react_app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:848523308061:loadbalancer/app/flask-react-app-ALB/82ca665bea64ca0c",
            "arn_suffix": "app/flask-react-app-ALB/82ca665bea64ca0c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "flask-react-app-ALB-134781424.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:848523308061:loadbalancer/app/flask-react-app-ALB/82ca665bea64ca0c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "flask-react-app-ALB",
            "security_groups": [
              "sg-098d1206d0b61c5a1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-012ef49073ec21b34"
              },
              {
                "subnet_id": "subnet-018a531e030fc761b"
              },
              {
                "subnet_id": "subnet-09f48fe3de3534711"
              },
              {
                "subnet_id": "subnet-0b0fc1ed5fa23a11b"
              },
              {
                "subnet_id": "subnet-0ebda44417a1904a9"
              },
              {
                "subnet_id": "subnet-0ed855ff1f7d5fb61"
              }
            ],
            "subnets": [
              "subnet-012ef49073ec21b34",
              "subnet-018a531e030fc761b",
              "subnet-09f48fe3de3534711",
              "subnet-0b0fc1ed5fa23a11b",
              "subnet-0ebda44417a1904a9",
              "subnet-0ed855ff1f7d5fb61"
            ],
            "vpc_id": "vpc-08d9d0b1dc4b47d41",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.flask_react_app_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "flask_react_app_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:848523308061:listener/app/flask-react-app-ALB/82ca665bea64ca0c/765ea0bd850b6744",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:848523308061:targetgroup/flask-react-app-TG/4c6a38e5fc482fcd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:848523308061:listener/app/flask-react-app-ALB/82ca665bea64ca0c/765ea0bd850b6744",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:848523308061:loadbalancer/app/flask-react-app-ALB/82ca665bea64ca0c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.flask_react_app_alb",
            "aws_lb_target_group.flask_react_app_tg",
            "aws_security_group.flask_react_app_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "flask_react_app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:848523308061:targetgroup/flask-react-app-TG/4c6a38e5fc482fcd",
            "arn_suffix": "targetgroup/flask-react-app-TG/4c6a38e5fc482fcd",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:848523308061:targetgroup/flask-react-app-TG/4c6a38e5fc482fcd",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "flask-react-app-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08d9d0b1dc4b47d41"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "flask_react_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:848523308061:security-group/sg-098d1206d0b61c5a1",
            "description": "flask-react-app-SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098d1206d0b61c5a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "flask-react-app-SG",
            "name_prefix": "",
            "owner_id": "848523308061",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08d9d0b1dc4b47d41"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}